OAuth support and model edit capabilities

--- a/app/scripts/template/card.hbs
+++ b/app/scripts/template/card.hbs
@@ -2,7 +2,6 @@
 <div id="{{model.id}}" class="card {{ctype model.labels}}">
   <div class="inner-card">
     <span class="comments"><i class="icon-comments"></i> {{model.comments}}</span>
-    <span class="no">{{model.number}}</span>
     <span class="title">{{model.title}}</span>
     {{#if model.body}}
     	<div class="body" style="display:none">
@@ -17,6 +16,7 @@
       	<span class="label {{contrast color}}" style="background: #{{color}}">{{name}}</span>
       {{/each}}
     </div>
+    <span class="no">#{{model.number}}</span>
   </div>
 </div>
 
