--- a/app/styles/main.scss
+++ b/app/styles/main.scss
@@ -37,6 +37,83 @@ body {
   color: #CCC;
 }
 
+.main {
+  display: block;
+  overflow: hidden;
+}
+
+header {
+  background-color: #323237;
+  color: #FFF;
+  border-top: 1px solid #111;
+  padding: 10px 0px 0px 0px;
+  overflow: hidden;
+  display: block;
+  height: 60px;
+  margin-top: -60px;
+  #puller {
+    background-color: #323237;
+    height: 10px;
+    position: absolute;
+    top: 0;
+    width: 100%;
+    :hover {
+      background-color: rgba(0, 0, 0, 0.2);
+    }
+  }
+  .brand {
+    margin-left: 20px;
+    line-height: 45px;
+    font-weight: bold;
+    font-size: 25px;
+    color: #111;
+    text-shadow: 0 1px 0 rgba(255,255,255,.1), 0 0 30px rgba(255,255,255,.125);
+    -webkit-transition: all .2s linear;
+    -moz-transition: all .2s linear;
+    transition: all .2s linear;
+  }
+  .brand:hover {
+    text-decoration: none;
+    color: #FFF;
+  }
+  #nav {
+    float: right;
+    margin-top: 4px;
+    a {
+      color: white;
+      background: rgba(0, 0, 0, 0.2);
+      padding: 10px 20px;
+      -moz-border-radius: 4px;
+      -webkit-border-radius: 4px;
+      border-radius: 4px;
+      display: block;
+      float: left;
+      margin-right: 30px;
+      font-size: 18px;
+    }
+    a.active, a:hover {
+      background: rgba(0,0,0, 0.5);
+      text-decoration: none;
+      cursor: pointer;
+    }
+    span#uname {
+      padding: 10px 20px;
+      display: block;
+      float: left;
+      margin-right: 10px;
+      font-size: 18px;
+    }
+  }
+}
+
+#welcome {
+  position: absolute;
+  top: 30%;
+  left: 50%;
+  width: 500px;
+  margin-left: -250px;
+}
+
 .kanban-board {
   margin: 30px 17px;
   width: 98%;
@@ -93,7 +170,7 @@ body {
       float: right;
     }
     .labels {
-
+      float: left;
     }
     .label {
       display: inline-block;
@@ -111,6 +188,8 @@ body {
     }
     .no {
       font-weight: bold;
+      color: rgba(0,0,0,0.65);
+      float: right;
     }
     .big {
       margin-right: 10%;
