--- a/app/styles/main.scss
+++ b/app/styles/main.scss
@@ -151,8 +151,22 @@ header {
   -moz-box-shadow: 1px 1px 2px 1px #333;
   -webkit-box-shadow: 1px 1px 2px 1px #333;
   box-shadow: 1px 1px 2px 1px #333;
-  text-shadow: 0 0 15px #fff, 0 0 15px #fff;
   margin: 5px 0 8px 0;
+  .dragger:hover {
+    -webkit-box-shadow: 0px 0px 0pt 2pt #CBE86B;
+    -moz-box-shadow: 0px 0px 0pt 2pt #CBE86B;
+    box-shadow: 0px 0px 0pt 2pt #CBE86B;
+  }
+  .title, .body {
+    text-shadow: 0 0 15px #fff, 0 0 15px #fff;
+  }
+  .body {
+    background-color: rgba(255, 255, 255, 0.65);
+    margin: 10px -5px;
+    padding: 5px;
+    border-top: 1px solid rgba(0, 0, 0, 0.15);
+    border-bottom: 1px solid rgba(0, 0, 0, 0.15);
+  }
   .inner-card {
     color: #222;
     border-radius: 2px;
@@ -162,7 +176,7 @@ header {
     background: #F3F1E0;
     cursor: default;
     display: block;
-    overflow: hidden;
+    position: relative;
     .title, .no {
       font-size: 1.15em;
     }
@@ -170,7 +184,7 @@ header {
       float: right;
     }
     .labels {
-      float: left;
+
     }
     .label {
       display: inline-block;
@@ -189,7 +203,8 @@ header {
     .no {
       font-weight: bold;
       color: rgba(0,0,0,0.65);
-      float: right;
+      text-shadow: none;
+      display: block;
     }
     .big {
       margin-right: 10%;
@@ -200,14 +215,17 @@ header {
     .small {
       margin-right: 1%;
     }
+    .foot {
+      clear: both;
+      display: block;
+    }
   }
   .users {
     display: block;
     clear: both;
-    overflow: hidden;
     margin-top: 5px;
+    height: 25px;
     .pict {
-      overflow: hidden;
       display: block;
       float: left;
       margin-right: 5px;
@@ -215,6 +233,11 @@ header {
       width: 25px;
       height: 25px;
     }
+  }
+  .signs {
+    position: absolute;
+    bottom: 5px;
+    right: 5px;
   }
 }
 
