--- a/app/styles/main.scss
+++ b/app/styles/main.scss
@@ -177,15 +177,18 @@ header {
     -moz-box-shadow: 0px 0px 0pt 2pt #CBE86B;
     box-shadow: 0px 0px 0pt 2pt #CBE86B;
   }
-  .title, .body {
+  .title, .body, .comment-body {
     text-shadow: 0 0 15px #fff, 0 0 15px #fff;
   }
-  .body {
+  .body, .comment-body {
     background-color: rgba(255, 255, 255, 0.65);
     margin: 10px -5px;
-    padding: 5px;
+    padding: 10px 5px 5px 5px;
     border-top: 1px solid rgba(0, 0, 0, 0.15);
     border-bottom: 1px solid rgba(0, 0, 0, 0.15);
+  }
+  .title:hover {
+    cursor: pointer;
   }
   .inner-card {
     color: #222;
@@ -202,6 +205,14 @@ header {
     }
     .comments {
       float: right;
+      color: #222;
+    }
+    .comments:hover {
+      cursor: pointer;
+      text-decoration: none;
+    }
+    .comments-content {
+      margin-bottom: 25px;
     }
     .labels {
 
@@ -209,6 +220,7 @@ header {
     .label {
       display: inline-block;
       font-size: 11px;
+      font-variant: small-caps;
       padding: 2px 4px;
       border-radius: 2px;
       box-shadow: inset 0 -1px 0 rgba(0,0,0,0.12);
@@ -238,6 +250,9 @@ header {
     .foot {
       clear: both;
       display: block;
+      a:hover {
+        text-decoration: none;
+      }
     }
   }
   .users {
@@ -245,14 +260,14 @@ header {
     clear: both;
     margin-top: 5px;
     height: 25px;
-    .pict {
-      display: block;
-      float: left;
-      margin-right: 5px;
-      border-radius: 2px;
-      width: 25px;
-      height: 25px;
-    }
+  }
+  .pict {
+    display: block;
+    float: left;
+    margin-right: 5px;
+    border-radius: 2px;
+    width: 25px;
+    height: 25px;
   }
   .signs {
     position: absolute;
